manifests/prod/romm/Deployment-romm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: romm-16.1.2
    app.kubernetes.io/instance: romm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: romm
    app.kubernetes.io/version: 4.8.0
    helm-revision: "1"
    helm.sh/chart: romm-16.1.2
    release: romm
  name: romm
  namespace: romm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: romm
      app.kubernetes.io/name: romm
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/cnpg: fc940fff4269c53072f7039f0811133e9b83400670af014010bf50d3f13740f4
        checksum/configmaps: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/mariadb: 900bef71820457b762f2e79e5205c34fcc22deab628e8cc80757f4758b86668f
        checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/persistence: 93f297b2dc801369910048359b61f369b9fa6ef724d690f7364d70cf9aeb0073
        checksum/redis: b36ef05605e31985783cca6dac7d7dc063bb332e9248510db045bfd5a602cfaa
        checksum/secrets: 4c7596bd8b1768685eda8356114d349772fcfcf3c96ba9c81a4784097c482f4d
        checksum/services: 4b546be00d25ad56b44b4d24cbff97d9830c9d79b2a43912df4e5912c109bf16
        checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
      labels:
        app: romm-16.1.2
        app.kubernetes.io/instance: romm
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: romm
        app.kubernetes.io/version: 4.8.0
        helm-revision: "1"
        helm.sh/chart: romm-16.1.2
        pod.lifecycle: permanent
        pod.name: main
        release: romm
        truecharts.org/pvc: assets_config_resources
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: truecharts.org/pvc
                    operator: In
                    values:
                      - assets_config_resources
              topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: NVIDIA_VISIBLE_DEVICES
              value: void
            - name: S6_READ_ONLY_ROOT
              value: "1"
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  key: plainhost
                  name: romm-mariadbcreds
            - name: DB_NAME
              value: romm
            - name: DB_PASSWD
              value: PLACEHOLDERPASSWORD
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: romm
            - name: DISABLE_CSRF_PROTECTION
              value: "true"
            - name: HASHEOUS_API_ENABLED
              value: "true"
            - name: HLTB_API_ENABLED
              value: "true"
            - name: IGDB_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: IGDB_CLIENT_ID
                  name: romm-secrets
            - name: IGDB_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: IGDB_CLIENT_SECRET
                  name: romm-secrets
            - name: OIDC_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: OIDC_CLIENT_ID
                  name: romm-secrets
            - name: OIDC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: OIDC_CLIENT_SECRET
                  name: romm-secrets
            - name: OIDC_ENABLED
              value: "true"
            - name: OIDC_PROVIDER
              valueFrom:
                secretKeyRef:
                  key: OIDC_PROVIDER
                  name: romm-secrets
            - name: OIDC_REDIRECT_URI
              valueFrom:
                secretKeyRef:
                  key: OIDC_REDIRECT_URI
                  name: romm-secrets
            - name: OIDC_SERVER_APPLICATION_URL
              valueFrom:
                secretKeyRef:
                  key: OIDC_SERVER_APPLICATION_URL
                  name: romm-secrets
            - name: PLAYMATCH_API_ENABLED
              value: "true"
            - name: REDIS_HOST
              valueFrom:
                secretKeyRef:
                  key: plainhost
                  name: romm-rediscreds
            - name: REDIS_PASSWORD
              value: PLACEHOLDERPASSWORD
            - name: REDIS_PORT
              value: "6379"
            - name: ROMM_AUTH_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: ROMM_AUTH_SECRET_KEY
                  name: romm-secrets
            - name: ROMM_BASE_PATH
              value: /romm
            - name: ROMM_HOST
              value: localhost
          image: ghcr.io/rommapp/romm:4.8.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: romm
          ports:
            - containerPort: 8080
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2400Mi
            requests:
              cpu: 75m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1002
            runAsNonRoot: true
            runAsUser: 1002
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /romm/assets
              name: assets
              readOnly: false
            - mountPath: /romm/config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /romm/library
              name: library
              readOnly: false
            - mountPath: /romm/resources
              name: resources
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: romm
              app.kubernetes.io/name: romm
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: varrun
        - name: library
          nfs:
            path: /r2d2_0/media/Roms
            server: 100.117.238.67
        - name: assets
          persistentVolumeClaim:
            claimName: romm-assets
        - name: config
          persistentVolumeClaim:
            claimName: romm-config
        - name: resources
          persistentVolumeClaim:
            claimName: romm-resources
