manifests/prod/romm/StatefulSet-romm-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: redis-1.0.3
    app.kubernetes.io/instance: romm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: latest
    helm-revision: "1"
    helm.sh/chart: redis-1.0.3
    release: romm
  name: romm-redis
  namespace: romm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: romm
      app.kubernetes.io/name: redis
      pod.name: main
  serviceName: romm-redis
  template:
    metadata:
      annotations:
        checksum/cnpg: fc940fff4269c53072f7039f0811133e9b83400670af014010bf50d3f13740f4
        checksum/configmaps: 26dc9fc6cf7fb3273b5d89742bb322be22945d95e5f2c3c6a549e118b01f9c77
        checksum/mariadb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/persistence: 50e2c5991ec74cea38a0211849459de2e42525643b14a7ee85018f7bcf8bce96
        checksum/redis: 013343a028cbb3f7e08f4ba7522702dd98e52632c688641074b0b1db3df29894
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/services: 1fbe77c7cddc2e9997579990c10c46e0224ee9bc92911122de33093d0550ad9f
        checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
      labels:
        app: redis-1.0.3
        app.kubernetes.io/instance: romm
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: redis
        app.kubernetes.io/version: latest
        helm-revision: "1"
        helm.sh/chart: redis-1.0.3
        pod.lifecycle: permanent
        pod.name: main
        release: romm
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: NVIDIA_VISIBLE_DEVICES
              value: void
            - name: PUID
              value: "568"
            - name: USER_ID
              value: "568"
            - name: UID
              value: "568"
            - name: PGID
              value: "568"
            - name: GROUP_ID
              value: "568"
            - name: GID
              value: "568"
            - name: ALLOW_EMPTY_PASSWORD
              value: "no"
            - name: VALKEY_PASSWORD
              value: PLACEHOLDERPASSWORD
            - name: VALKEY_PORT
              value: "6379"
          image: docker.io/bitnamisecure/valkey:latest@sha256:ddde14f88afb0d0e054fca3b635304ce39701e20cc5404a7c46951e201a90588
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 2
            failureThreshold: 5
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: romm-redis
          ports:
            - containerPort: 6379
              name: main
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 2
            failureThreshold: 4
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2400Mi
            requests:
              cpu: 75m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 2
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /health
              name: valkey-health
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: romm
              app.kubernetes.io/name: redis
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - configMap:
            defaultMode: 493
            items:
              - key: ping_readiness_local.sh
                path: ping_readiness_local.sh
              - key: ping_liveness_local.sh
                path: ping_liveness_local.sh
              - key: ping_readiness_master.sh
                path: ping_readiness_master.sh
              - key: ping_liveness_master.sh
                path: ping_liveness_master.sh
              - key: ping_liveness_local_and_master.sh
                path: ping_liveness_local_and_master.sh
              - key: ping_readiness_local_and_master.sh
                path: ping_readiness_local_and_master.sh
            name: romm-redis-health
            optional: false
          name: valkey-health
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
          name: varrun
  updateStrategy:
    type: RollingUpdate
