manifests/prod/romm/Service-romm-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb-18.0.2
    app.kubernetes.io/instance: romm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: latest
    helm-revision: "1"
    helm.sh/chart: mariadb-18.0.2
    release: romm
    service.name: main
  name: romm-mariadb
  namespace: romm
spec:
  ports:
    - name: main
      port: 3306
      protocol: TCP
      targetPort: 3306
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: mariadb
    pod.name: main
  type: ClusterIP
