manifests/prod/romm/Service-romm-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-1.0.3
    app.kubernetes.io/instance: romm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: latest
    helm-revision: "1"
    helm.sh/chart: redis-1.0.3
    release: romm
    service.name: main
  name: romm-redis
  namespace: romm
spec:
  ports:
    - name: main
      port: 6379
      protocol: TCP
      targetPort: 6379
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: redis
    pod.name: main
  type: ClusterIP
