manifests/prod/romm/Service-romm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: romm-16.1.2
    app.kubernetes.io/instance: romm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: romm
    app.kubernetes.io/version: 4.8.0
    helm-revision: "1"
    helm.sh/chart: romm-16.1.2
    release: romm
    service.name: main
  name: romm
  namespace: romm
spec:
  ports:
    - name: main
      port: 10680
      protocol: TCP
      targetPort: 8080
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: romm
    pod.name: main
  type: ClusterIP
