manifests/prod/romm/Ingress-romm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/funnel: "true"
  name: romm
  namespace: romm
spec:
  defaultBackend:
    service:
      name: romm
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - romm
